<resources>
    <string name="app_name">Caring</string>
    <string name="rajindu">---------------------------------Rajindu--------------------------------------</string>
    <string name="Education">Education</string>
    <string name="school_heading">School</string>
    <string name="input_school_name">School Name</string>
    <string name="input_grade">Grade</string>
    <string name="input_class_teacher">Class Teacher Name</string>
    <string name="input_school_phone">School Phone</string>
    <string name="input_teacher_phone">Teacher Phone</string>
    <string name="Update_school">Change School</string>
    <string name="delete_grade">Remove Grade</string>
    <string name="view_Edu">Education Details</string>

    <string name="main_dashboard">Dashboard</string>

    <string name="subject_heading">Subjects</string>
    <string name="subject_1">Maths</string>
    <string name="subject_2">Sinhala</string>
    <string name="subject_3">English</string>
    <string name="subject_4">Tamil</string>
    <string name="subject_5">Religion</string>
    <string name="subject_6">ENV</string>
    <string name="subject_7">Dancing</string>
    <string name="subject_8">Music</string>
    <string name="subject_9">Art</string>

    <string name="grade">Choose a Grade</string>

    <string-array name="grade_arrays">
        <item>kindergarten</item>
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
    </string-array>

    <string name="marks_heading">Marks</string>
    <string name="Mark">Enter Mark</string>

    <string name="dilmi">-----------------------------------------Dilmi---------------------------------------------</string>
    <string name="health_heading">Health Care</string>
    <string name="insert_weight">Weight</string>
    <string name="insert_height">Height</string>
    <string name="insert_doctor1">Doctor</string>
    <string name="insert_condition">Health Condition</string>
    <string name="insert_allergies">Allergies</string>
    <string name="insert_specialization2">Specialization</string>

    <string name="health_dashboard">Health</string>
    <string name="health_medics">Medics</string>

    <string name="insert_medicine">Medicine</string>
    <string name="insert_time">Time</string>
    <string name="insert_AtaTime">At a Time</string>
    <string name="insert_description">Description</string>

    <string name="health_injection">Vaccines</string>
    <string name="insert_birthday">Birth Date</string>

    <string name="health_vaccine">Vaccines</string>
    <string name="health_viewHealth">Details</string>
    <string name="health_registration">Sign Up</string>

    <string name="AB">--------------------------------------------------AB------------------------------------------------------------</string>

    <string name="health_achievement">Achievements</string>
    <string name="insert_event">Event</string>
    <string name="insert_description2">Description</string>
    <string name="insert_award">Awards</string>
    <string name="insert_date2">Date</string>
    <string name="gallery">Achievement List</string>
    <string name="achievement_update">Update Achievement</string>
    <string name="event_ex">Sportmeet 2019</string>
    <string name="event_des">Running 100m</string>
    <string name="award_event">Silver Medal</string>
    <string name="delete_achievement">Remove Achievement</string>
    <string name="achievement">Achievement</string>
    <string name="view_Ach">Achievement Details</string>


    <string-array name="achievement_arrays">
        <item>Sportmeet 2019</item>
        <item>Prize Giving 2020</item>

    </string-array>
    <string name="achievement_dashboard">Achievement</string>

    <string name="dilumi">-----------------------------------------------Dilumi-----------------------------------------------</string>
    <string name="timetable_heading">Add Task</string>
    <string name="insert_date">date</string>
    <string name="insert_start">startTime</string>
    <string name="insert_end">endTime</string>
    <string name="insert_subject">subject</string>

    <string name="Update_heading">Let us Update</string>
    <string name="Update_date">date</string>
    <string name="Update_start">startTime</string>
    <string name="Update_end">endTime</string>
    <string name="Update_subject">subject</string>
    <string name="view_heading">All tasks</string>

    <string name="schools_list">Schools</string>
    <string name="add_school">ADD SCHOOL</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="term">Term</string>
    <string name="total">Total</string>
    <string name="count">Total Subjects</string>
    <string name="grade1">Grade 1</string>
    <string name="grade2">Grade 2</string>
    <string name="grade3">Grade 3</string>
    <string name="grade4">Grade 4</string>
    <string name="grade5">Grade 5</string>
    <string name="grade6">Grade 6</string>
    <string name="input_term">Enter the term</string>
    <string name="year">Year</string>
    <string name="achievements">Achievements</string>
    <string name="invalid_input">Fill this feilds</string>

</resources>
